GNOME Bugzilla – Bug 757935
vtenc double-releases CFString 'profile_level' on restart
Last modified: 2015-11-16 07:18:54 UTC
Created attachment 315244 [details] [review] Fixes double-release Please see attached patch
commit 788ff2f98e5962a750fadcd23a12c63a55d2fffd Author: Heinrich Fink <hfink@toolsonair.com> Date: Wed Nov 11 11:40:52 2015 +0100 vtenc: Set profile_level to NULL after release Otherwise, gst_vtenc_negotiate_profile_and_level will double-release as it checks for profile_level != NULL. This caused crashes when the vtenc instance is stopped and then restarted. https://bugzilla.gnome.org/show_bug.cgi?id=757935